--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <title>mi e-commerce</title>
 </head>
 <body>
-    <h1>{{name}}</h1>
-    <h2>{{last_name}}</h2>
+    <h1>{{name}}{{/name}}</h1>
+    <h2>{{last_name}}{{/last_name}}</h2>
 </body>
 </html>
