--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi e-commerce</title>
-    <link rel="stylesheet" href="public/css/styles.css">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    {{{body}}}
+    {{> nav}}
+    {{> header}}
+
+    <main>
+        {{{body}}}
+    </main>
+
+    {{> footer}}
 </body>
+
 </html>
