--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>
-    <h1>Tienda de Yoga</h1>
-    <p>Encuentra los mejores productos para tu práctica</p>
+    <h1>Bienvenido a la Tienda</h1>
+    <p>Encontra los mejores productos para tu práctica</p>
 </header>
