--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -1,12 +1,13 @@
-<section class="productos">
+<h1>Productos de Yoga</h1>
+<div class="product-list">
     {{#each products}}
-    <article class="producto">
+    <div class="product-card">
         <img src="{{this.thumbnail}}" alt="{{this.title}}">
         <h2>{{this.title}}</h2>
         <p>{{this.description}}</p>
-        <p>Precio: ${{this.price}}</p>
-        <p>Código: {{this.code}}</p>
-        <p>Stock: {{this.stock}}</p>
-    </article>
+        <p><strong>Precio:</strong> ${{this.price}}</p>
+        <p><strong>Código:</strong> {{this.code}}</p>
+        <p><strong>Stock:</strong> {{this.stock}}</p>
+    </div>
     {{/each}}
-</section>
+</div>
