--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Yoga Shop</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
-    {{> nav}}
-    {{> header}}
+  {{> nav}}
+  {{> header}}
 
-    <main>
-        {{{body}}}
-    </main>
+  <main>
+    {{{body}}}
+  </main>
 
-    {{> footer}}
+  {{> footer}}
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/main.js"></script>
 </body>
-
 </html>
