--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -1,13 +1,27 @@
-<h1>Productos de Yoga</h1>
+<h1>Nuestros productos</h1>
+
+<form action="/products" method="POST">
+  <input type="text" name="title" placeholder="Título" required>
+  <input type="text" name="description" placeholder="Descripción" required>
+  <input type="number" name="price" placeholder="Precio" required>
+  <input type="text" name="thumbnail" placeholder="URL de la imagen" required>
+  <input type="text" name="code" placeholder="Código" required>
+  <input type="number" name="stock" placeholder="Stock" required>
+  <button type="submit">Agregar Producto</button>
+</form>
+
 <div class="product-list">
-    {{#each products}}
+  {{#each products}}
     <div class="product-card">
-        <img src="{{this.thumbnail}}" alt="{{this.title}}">
-        <h2>{{this.title}}</h2>
-        <p>{{this.description}}</p>
-        <p><strong>Precio:</strong> ${{this.price}}</p>
-        <p><strong>Código:</strong> {{this.code}}</p>
-        <p><strong>Stock:</strong> {{this.stock}}</p>
+      <img src="{{this.thumbnail}}" alt="{{this.title}}">
+      <h2>{{this.title}}</h2>
+      <p>{{this.description}}</p>
+      <p><strong>Precio:</strong> ${{this.price}}</p>
+      <p><strong>Código:</strong> {{this.code}}</p>
+      <p><strong>Stock:</strong> {{this.stock}}</p>
+      <form action="/products/delete/{{this.code}}" method="POST">
+        <button type="submit">Eliminar</button>
+      </form>
     </div>
-    {{/each}}
+  {{/each}}
 </div>
